# HumanRetargetingController

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yaml  package.xml  requirements.txt  robots.txt
.github/workflows/: ci.yaml
doc/: CMakeLists.txt
doxygen/: ArmRetargetingManager_8h.html  ArmRetargetingManager_8h__incl.map  ArmRetargetingManager_8h__incl.md5  ArmRetargetingManager_8h_source.html  ArmSide_8h.html  ArmSide_8h__dep__incl.map  ArmSide_8h__dep__incl.md5  ArmSide_8h__incl.map  ArmSide_8h__incl.md5  ArmSide_8h_source.html  FootTypes_8h.html  FootTypes_8h__incl.map  FootTypes_8h__incl.md5  FootTypes_8h_source.html  HumanRetargetingController_8h.html  HumanRetargetingController_8h__incl.map  HumanRetargetingController_8h__incl.md5  HumanRetargetingController_8h_source.html  InitialState_8h.html  InitialState_8h__incl.map  InitialState_8h__incl.md5  InitialState_8h_source.html  MathUtils_8h.html  MathUtils_8h__incl.map  MathUtils_8h__incl.md5  MathUtils_8h_source.html  README_8md.html  RetargetingManagerSet_8h.html  RetargetingManagerSet_8h__incl.map  RetargetingManagerSet_8h__incl.md5  RetargetingManagerSet_8h_source.html  RetargetingManager_8h.html  RetargetingManager_8h__dep__incl.map  RetargetingManager_8h__dep__incl.md5  RetargetingManager_8h__incl.map  RetargetingManager_8h__incl.md5  RetargetingManager_8h_source.html  RetargetingPhase_8h.html  RetargetingPhase_8h__dep__incl.map  RetargetingPhase_8h__dep__incl.md5  (+116 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+45 more)
etc/: HumanRetargetingController.in.yaml  mc_rtc.in.yaml
launch/: display.launch
rviz/: display.rviz
scripts/: PublishManager.py  PublishPoseInteractiveMarker.py  PublishPoseViveTracker.py  publishPose.py
src/: ArmRetargetingManager.cpp  ArmSide.cpp  CMakeLists.txt  HumanRetargetingController.cpp  RetargetingManager.cpp  RetargetingManagerSet.cpp  RetargetingPhase.cpp  RosPoseManager.cpp  State.cpp  lib.cpp
(+16 files in other folders)
